_BACKUP/z_HTML-VERSIONS/version3/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/queue.md
<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">My Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Index</span></a>

<a href="../../readme-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">README</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">GCA Sprint Prep:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<a href="string.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">String</span></a>

<a href="set.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Set</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Data Structures Overview</span>

<a href="overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span>

<a href="queue-sandbox.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue Sandbox</span></a>

<a href="queue/queue-continued....html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue Continued...</span></a>

<a href="queue/dequeue.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dequeue</span></a>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span>

<a href="heap.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Heap</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Inheritance</span></a>

<a href="../../resources/strings.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Strings</span></a>

<a href="../../resources/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../quick-reference/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python3-regex.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python3 Regex</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span>

<a href="../../quick-reference/creating-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Creating Python Modules</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../quick-reference/bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/classes-and-objects.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes and objects</span></a>

<a href="../../stdlib/conditionals-and-loops.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Conditionals and loops</span></a>

<a href="../../stdlib/dictionaries-sets-files-and-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries, sets, files, and modules</span></a>

<a href="../../stdlib/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Functions</span></a>

<a href="../../stdlib/values-expressions-and-statments.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Values Expressions &amp; Statments</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../misc/built-in-methods-and-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Methods &amp; Functions</span></a>

<a href="../../misc/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<a href="../../installations-setup-and-env/installing-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Installing Python Modules</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Queue</span>
==========================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="1dcf6febd290444fb138e77be0e4cc8a"><span data-offset-key="1dcf6febd290444fb138e77be0e4cc8a:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="de6d4d082d514cfcb57fd294130b86e7"><span data-offset-key="de6d4d082d514cfcb57fd294130b86e7:0">Queue</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="620213102d6b478fa7907ab73524ac7d"><span data-offset-key="620213102d6b478fa7907ab73524ac7d:0">Implement a Queue class from scratch with an existing bug, the bug is that it cannot take more than 5 elements.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="57b6971c93f746c6b057564fcdb9b40b"><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:0">Implement a Queue using two stacks. You may only use the standard </span><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:1">`push()`</span><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:2">, </span><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:3">`pop()`</span><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:4">, and </span><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:5">`peek()`</span><span data-offset-key="57b6971c93f746c6b057564fcdb9b40b:6"> operations traditionally available to stacks. You do not need to implement the stack yourself (i.e. an array can be used to simulate a stack).</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="2bef3937e3cc40678d116f107c89b548"><span data-offset-key="2bef3937e3cc40678d116f107c89b548:0">Queues in Python</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8a1d5399e22a41cfbe2aee9ad5594762"><span data-offset-key="8a1d5399e22a41cfbe2aee9ad5594762:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.educative.io/blog/data-structures-stack-queue-java-tutorial" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="a82c1a5ffec549adbcb93a1029bc3ac1"><span data-offset-key="a82c1a5ffec549adbcb93a1029bc3ac1:0">Queues</span></span></a><span data-key="3496f726425f4d09ae3a4efa21fd0db7"><span data-offset-key="3496f726425f4d09ae3a4efa21fd0db7:0"> are a linear data structure that store data in a “first in, first out” (FIFO) order. Unlike arrays, you cannot access elements by index and instead can </span><span data-offset-key="3496f726425f4d09ae3a4efa21fd0db7:1">**only pull the next oldest element**</span><span data-offset-key="3496f726425f4d09ae3a4efa21fd0db7:2">. This makes it great for order-sensitive tasks like online order processing or voicemail storage.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="124310b9720a464695fd707ee174757f"><span data-offset-key="124310b9720a464695fd707ee174757f:0">You can think of a queue as a line at the grocery store; the cashier does not choose who to check out next but rather processes the person who has stood in line the longest.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b4ccaa3aa0954641a88831631d33afea"><span data-offset-key="b4ccaa3aa0954641a88831631d33afea:0">We could use a Python list with </span><span data-offset-key="b4ccaa3aa0954641a88831631d33afea:1">`append()`</span><span data-offset-key="b4ccaa3aa0954641a88831631d33afea:2"> and </span><span data-offset-key="b4ccaa3aa0954641a88831631d33afea:3">`pop()`</span><span data-offset-key="b4ccaa3aa0954641a88831631d33afea:4"> methods to implement a queue. However, this is inefficient because lists must shift all elements by one index whenever you add a new element to the beginning.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="edc72793808943c6a67ad2d26f0dc3aa"><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:0">Instead, it’s best practice to use the </span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:1">`deque`</span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:2"> class from Python’s </span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:3">`collections`</span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:4"> module. Deques are optimized for the append and pop operations. The deque implementation also allows you to create double-ended queues, which can access both sides of the queue through the </span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:5">`popleft()`</span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:6"> and </span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:7">`popright()`</span><span data-offset-key="edc72793808943c6a67ad2d26f0dc3aa:8"> methods.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f995ea23ece14842b5050a4d5fa3f8d0"><span data-offset-key="f995ea23ece14842b5050a4d5fa3f8d0:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e132ce07bf8443f58573387cd96459ca"><span data-offset-key="e132ce07bf8443f58573387cd96459ca:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="94f09cc101564790b2af7091e2ec735c"><span data-offset-key="94f09cc101564790b2af7091e2ec735c:0">**Advantages:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bf7c1a74266d4d33b4c7255e2c83ccd5"><span data-offset-key="bf7c1a74266d4d33b4c7255e2c83ccd5:0">Automatically orders data chronologically</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9e89cae0697b40079ce2d9f9c333eae6"><span data-offset-key="9e89cae0697b40079ce2d9f9c333eae6:0">Scales to meet size requirements</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="986fe9c309554a99acc94878b3cc232f"><span data-offset-key="986fe9c309554a99acc94878b3cc232f:0">Time efficient with </span><span data-offset-key="986fe9c309554a99acc94878b3cc232f:1">`deque`</span><span data-offset-key="986fe9c309554a99acc94878b3cc232f:2"> class</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="48085b35ac7c4efd968c74b468e0af25"><span data-offset-key="48085b35ac7c4efd968c74b468e0af25:0">**Disadvantages:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b075698c3e4d425d96d262ed821dc6f9"><span data-offset-key="b075698c3e4d425d96d262ed821dc6f9:0">Can only access data on the ends</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="00637c056af049e9a5bac725c96b8ae2"><span data-offset-key="00637c056af049e9a5bac725c96b8ae2:0">**Applications:**</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7e2236d2ebd54be5be8017a425874372"><span data-offset-key="7e2236d2ebd54be5be8017a425874372:0">Operations on a shared resource like a printer or </span></span><a href="https://www.educative.io/blog/beginners-guide-to-computers-and-programming" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="de92757fab254e508e38219b9b89ccc3"><span data-offset-key="de92757fab254e508e38219b9b89ccc3:0">CPU core</span></span></a><span data-key="1e279c2f733b4870877ed0c9bd8e074a"><span data-offset-key="1e279c2f733b4870877ed0c9bd8e074a:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f5f927e0b5c84df38eb7535a665691f4"><span data-offset-key="f5f927e0b5c84df38eb7535a665691f4:0">Serve as temporary storage for batch systems</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="075514ff390c4c33a5327eaad32ffbda"><span data-offset-key="075514ff390c4c33a5327eaad32ffbda:0">Provides an easy default order for tasks of equal importance</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="532d15e462124f988914f0a9d112365a"><span data-offset-key="532d15e462124f988914f0a9d112365a:0">Common queue interview questions in Python</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="706066add1024183852e62d653e3bb40"><span data-offset-key="706066add1024183852e62d653e3bb40:0">Reverse first k elements of a queue</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="62788ce0b1604fc9aaa096ae1e4fe48e"><span data-offset-key="62788ce0b1604fc9aaa096ae1e4fe48e:0">Implement a queue using a linked list</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c4925bca18de40a3b7d6f985639e2ad9"><span data-offset-key="c4925bca18de40a3b7d6f985639e2ad9:0">Implement a stack using a queue</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fa7015cb3fab44c89cee60101f144936"><span data-offset-key="fa7015cb3fab44c89cee60101f144936:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Implementation </span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Second Tab</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Implementation </span>

    """Make a Queue class using a list!Hint: You can use any Python list methodyou'd like! Try to write each one in asfew lines as possible.Make sure you pass the test cases too!"""​class Queue:    def __init__(self, head=None):        self.storage = [head]​    def enqueue(self, new_element):        if(self.storage):            self.storage.append(new_element)        else:            self.storage = [new_element]        return new_element​    def peek(self):        if(self.storage):            return self.storage[0]        else:            return None​    def dequeue(self):        if(self.storage):            return self.storage.pop(0)        else:            return None​# Setupq = Queue(1)q.enqueue(2)q.enqueue(3)​# Test peek# Should be 1print q.peek()​# Test dequeue# Should be 1print q.dequeue()​# Test enqueueq.enqueue(4)# Should be 2print q.dequeue()# Should be 3print q.dequeue()# Should be 4print q.dequeue()q.enqueue(5)# Should be 5print q.peek()​

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Second Tab</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="839635707a344c7089ad2ae5b27ad4d6"><span data-offset-key="839635707a344c7089ad2ae5b27ad4d6:0"><span data-slate-zero-width="n">​</span></span></span></span>

    """Make a Queue class using a list!Hint: You can use any Python list methodyou'd like! Try to write each one in asfew lines as possible.Make sure you pass the test cases too!"""​class Queue:    def __init__(self, head=None):        self.storage = [head]​    def enqueue(self, new_element):        if(self.storage):            self.storage.append(new_element)        else:            self.storage = [new_element]        return new_element​    def peek(self):        if(self.storage):            return self.storage[0]        else:            return None​    def dequeue(self):        if(self.storage):            return self.storage.pop(0)        else:            return None​# Setupq = Queue(1)q.enqueue(2)q.enqueue(3)​# Test peek# Should be 1print q.peek()​# Test dequeue# Should be 1print q.dequeue()​# Test enqueueq.enqueue(4)# Should be 2print q.dequeue()# Should be 3print q.dequeue()# Should be 4print q.dequeue()q.enqueue(5)# Should be 5print q.peek()​

<a href="stack/stack-continued.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Stack Continued</span>

<a href="queue-sandbox.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Queue Sandbox</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 8 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/practice/untitled/queue/README.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="queue.html#queue" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Queue</span></span>

<a href="queue.html#queues-in-python" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Queues in Python</span></span>
